--- a/server/package.json
+++ b/server/package.json
@@ -4,7 +4,7 @@
   "description": "npm init -y",
   "main": "index.js",
   "scripts": {
-    "start": "node dist/app.js",
+    "start": "node dist/app.ts",
     "dev": "ts-node-dev src/app.ts",
     "build": "tsc"
   },
