--- a/server/package.json
+++ b/server/package.json
@@ -6,7 +6,9 @@
   "scripts": {
     "start": "node dist/app.js",
     "dev": "ts-node-dev src/app.ts",
-    "build": "tsc"
+    "build": "tsc",
+    "prebuild": "rm -rf dist",
+    "postbuild": "pwd && ls -R dist"
   },
   "keywords": [],
   "author": "",
