--- a/server/package.json
+++ b/server/package.json
@@ -6,9 +6,7 @@
   "scripts": {
     "start": "node dist/app.js",
     "dev": "ts-node-dev src/app.ts",
-    "build": "tsc",
-    "prebuild": "rm -rf dist",
-    "postbuild": "pwd && ls -R dist"
+    "build": "tsc"
   },
   "keywords": [],
   "author": "",
