--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "dist/app.js",
   "scripts": {
     "start": "node dist/app.js",
-    "dev": "ts-node-dev src/app.ts",
+    "dev": "nodemon src/app.ts",
     "build": "tsc"
   },
   "keywords": [],
